# GMR

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp
source/opus/: fastmath.h  rangedec.cpp  rangedec.h
source/util/: buffers.cpp  buffers.h
